--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /.idea
 .project
 .classpath
+.vscode
 .c9/
 *.launch
 .settings/
@@ -33,7 +34,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
-
+/build
 # System Files
 .DS_Store
 Thumbs.db
